# Robo-Dan

./: .dockerignore  .env  .gitignore  .pdm-python  Cargo.toml  Dockerfile  README.md  application.yml  bot.py  colours.sh  docker-compose.yml  dump.sh  launcher.py  main.py  pyproject.toml  requirements.txt  restore.sh
cogs/: __init__.py  art.py  developer.py  error_handler.py  hot_reload.py  music.py  owner.py  reminder.py  sonarr.py  speech_to_text.py  stats.py  todo.py  youtube.py
devscripts/: convert_ytdlp_args.py
postgres/: Dockerfile  init.sql
postgres/migrations/: V1__init.sql  V2__todos.sql
servarr/data/media/: .placeholder
servarr/data/usenet/: .placeholder
src/: lib.rs
utils/: __init__.py  context.py  db.py  emotes.py  formats.py  interaction.py  sonarr.py  time.py
utils/models/: sonarr.py
