[tool.pyright]
typeCheckingVersion = "basic"
reportUnusedImport = "error"
reportUnnecessaryTypeIgnoreComment = "error"

[tool.ruff]
line-length = 125
target-version = "py310"
# select = [
#     "F", "E", "I", "C90", "UP", "YTT", "ANN", "S", "BLE", "B", "A", "COM", "C4", "DTZ",
#     "EM", "ISC", "G", "INP", "PIE", "T20", "Q003", "RSE", "RET", "SIM", "TID", "PTH", 
#     "ERA", "PD", "PLC", "PLE", "PLR", "PLW", "TRY", "NPY", "RUF"
# ]
# # todo: decide what to do with S101
# ignore = ["G002", "TRY002", "S101", "PLR2004", "SIM105"]
# unfixable = ["C90", "S101", "ERA"]

[tool.pdm]
distribution = false

[project]
name = "robo-dan"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Void-ux", email = "77840397+Void-ux@users.noreply.github.com"},
]
dependencies = [
    "click>=8.1.7",
    "aiob2>=0.8.4",
    "Pillow>=10.4.0",
    "aiohttp>=3.9.5",
    "asyncpg>=0.29.0",
    "psutil>=6.0.0",
    "python-dateutil>=2.9.0.post0",
    "parsedatetime>=2.6",
    "jishaku>=2.5.2",
    "yt-dlp>=2024.7.2",
    "orjson>=3.10.6",
    "uvloop>=0.19.0",
    "humanize>=4.9.0",
    "beautifulsoup4>=4.12.3",
    "pytz>=2024.1",
    "line-profiler>=4.1.3",
    "lru-dict>=1.3.0",
    "lxml>=5.2.2",
    "discord-py>=2.4.0",
    "ffmpeg-python>=0.2.0",
    "colorama>=0.4.6",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}
